# pipeline-incident-investigator

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.airflow  Dockerfile.dbt  README.md  docker-compose.yaml  evaluation_results.json  investigation_report.json  main.py  pyproject.toml  requirements.txt  test_all_scenarios.py  test_graph_first_half.py  test_postgres_connector.py  test_prompts.py  test_trigger.py
agent/: __init__.py  graph.py  main.py  state.py
agent/connectors/: __init__.py  airflow_connector.py  dbt_connector.py  postgres_connector.py
agent/evidence/: __init__.py  log_parser.py  query_templates.py
agent/memory/: __init__.py  embedding_service.py  incident_store.py  seed_incidents.json
agent/nodes/: __init__.py  classifier.py  code_inspector.py  context_collector.py  evidence_analyzer.py  fix_generator.py  incident_retriever.py  intake.py  lineage_tracer.py  response_formatter.py  root_cause_reasoner.py  router.py  signal_extractor.py
agent/prompts/: __init__.py  classification.py  code_inspection.py  extraction.py  fix_generation.py  question_parser.py  reasoning.py
cli/: __init__.py  display.py  investigate.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
eval/: __init__.py  run_eval.py  scoring.py
scripts/: clean_incidents.py  seed_incidents.py  trigger_failure.sh
sql/: init_db.sql
tests/: airflowLogs_debug.py  clean_poison_info.py  test_all_scenarios.py  test_evidence_templates.py  test_graph_first_half.py  test_graph_full.py  test_langsmith.py  test_log_parser.py  test_prompts.py  test_utils.py
(+21 files in other folders)
